syntax = "proto3";

package rpc;

option go_package = "./";

service TaskService {
    rpc RunTask(TaskRequest) returns (TaskResponse) {}
}

message TaskRequest {
    int32 id = 1;
    int32 priority = 2;
    int64 exec_time = 3; // Use int64 to represent time as Unix timestamp
    string route_strategy = 4;
    string task_type = 5;
    string task_param = 6;
    int64 task_timeout = 7;
}

message TaskResponse {
    int32   id = 1;
    int64   ExecTime = 2;
    int64   DispatchTime = 3;
    int64   Result = 4;
    string  Error = 5;
}